--- a/main/templates/main/base1.html
+++ b/main/templates/main/base1.html
@@ -112,17 +112,20 @@
     </nav>
     <!-- Navbar End -->
 
-      
+    
+    {% block content %}
+        
+    {% endblock content %}
+        
+
     {% block post %}
         
     {% endblock post %}
-    
     
     {% block about %}
         
     {% endblock about %}
         
-    
     {% block form %}
         
     {% endblock form %}
@@ -131,7 +134,6 @@
         
     {% endblock detail %}
         
-    
     {% block contact %}
         
     {% endblock contact %}
