--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -1,47 +1,59 @@
-{% extends "base.html" %}
+{% extends "main/base1.html" %}
 {% load static %} 
 
 
-{% block post_detail %}
-        <!-- Courses Start -->
-        <div class="container-xxl py-5">
-            <div class="container">
-                <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-                    <h6 class="section-title bg-white text-center text-primary px-3">หมวดหมู่</h6>
-                    <h1 class="mb-5">ยอดนิยม</h1>
-                </div>
-                <div class="row g-4 justify-content-center">
-                    <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
-                        <div class="course-item bg-light">
-                            <div class="position-relative overflow-hidden">
-                                <img class="img-fluid" src="img/course-1.jpg" alt="">
-                                <div class="w-100 d-flex justify-content-center position-absolute bottom-0 start-0 mb-4">
-                                    <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3 border-end" style="border-radius: 30px 0 0 30px;">Read More</a>
-                                    <a href="#" class="flex-shrink-0 btn btn-sm btn-primary px-3" style="border-radius: 0 30px 30px 0;">Join Now</a>
-                                </div>
-                            </div>
-                            <div class="text-center p-4 pb-0">
-                                <h3 class="mb-0">$149.00</h3>
-                                <div class="mb-3">
-                                    <small class="fa fa-star text-primary"></small>
-                                    <small class="fa fa-star text-primary"></small>
-                                    <small class="fa fa-star text-primary"></small>
-                                    <small class="fa fa-star text-primary"></small>
-                                    <small class="fa fa-star text-primary"></small>
-                                    <small>(123)</small>
-                                </div>
-                                <h5 class="mb-4">Web Design & Development Course for Beginners</h5>
-                            </div>
-                            <div class="d-flex border-top">
-                                <small class="flex-fill text-center border-end py-2"><i class="fa fa-user-tie text-primary me-2"></i>John Doe</small>
-                                <small class="flex-fill text-center border-end py-2"><i class="fa fa-clock text-primary me-2"></i>1.49 Hrs</small>
-                                <small class="flex-fill text-center py-2"><i class="fa fa-user text-primary me-2"></i>30 Students</small>
-                            </div>
+{% block content %}
+<!-- Carousel Start -->
+<div class="container-fluid p-0 mb-5">
+    <div class="owl-carousel header-carousel position-relative">
+        <div class="owl-carousel-item position-relative">
+            <img class="img-fluid" src="{% static 'img/breastmilk3.jpg' %}" alt="">
+            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" >
+                <div class="container">
+                    <div class="row justify-content-start">
+                        <div class="col-sm-10 col-lg-8">
+                            <h5 class="text-primary text-uppercase mb-3 animated slideInDown">เลี้ยงลูกด้วยนมแม่ให้สำเร็จ</h5>
+                            <h1 class="display-3 text-white animated slideInDown">“น้ำนมแม่” ประโยชน์แท้จากธรรมชาติ</h1>
+                            <p class="fs-5 text-white mb-4 pb-2">องค์การอนามัยโลก (WHO) และยูนิเซฟ แนะนำว่าลูกควรได้กินนมแม่อย่างเดียว ตั้งแต่แรกเกิดถึง 6 เดือน และควรกินต่อเนื่องไปจนลูกอายุ 2 ปี</p>
+                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">อ่านต่อ</a>
+                            <!--<a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
+                            -->
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-        <!-- Courses End -->
-{% endblock post_detail %}
-    
+        <div class="owl-carousel-item position-relative">
+            <img class="img-fluid" src="{% static 'img/breastmilk2.jpg' %}" alt="">
+            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
+                <div class="container">
+                    <div class="row justify-content-start">
+                        <div class="col-sm-10 col-lg-8">
+                            <h5 class="text-primary text-uppercase mb-3 animated slideInDown">เลี้ยงลูกด้วยนมแม่ให้สำเร็จ</h5>
+                            <h1 class="display-3 text-white animated slideInDown">“ให้ลูกดูดเร็ว  ดูดบ่อย ดูดถูกต้องหรือดูดถูกวิธี”</h1>
+                            <p class="fs-5 text-white mb-4 pb-2">องค์การอนามัยโลก (WHO) และยูนิเซฟ แนะนำว่าลูกควรได้กินนมแม่อย่างเดียว ตั้งแต่แรกเกิดถึง 6 เดือน และควรกินต่อเนื่องไปจนลูกอายุ 2 ปี</p>
+                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">อ่านต่อ</a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- Carousel End -->
+
+    <div class="container-xxl py-5">
+        
+    {% for post in posts %}
+        <div class="container">
+            <h1>Blog Posts</h1>
+            <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+            <p>By {{ post.author }} on {{ post.created_at }}</p>
+            <p>Likes: <span id="likes-count-{{ post.pk }}">{{ post.total_likes }}</span></p>
+        </div>
+    {% endfor %}
+    </div>
+
+{% endblock content %}
+
