--- a/main/templates/main/post_list.html
+++ b/main/templates/main/post_list.html
@@ -1,6 +1,6 @@
-{% extends 'main/base.html' %}
+{% extends 'main/base1.html' %}
 
-{% block content %}
+{% block post %}
     <h1>Blog Posts</h1>
     {% if user.is_authenticated %}
         <a href="{% url 'post_create' %}">Create New Post</a>
@@ -13,4 +13,4 @@
             <p>Likes: <span id="likes-count-{{ post.pk }}">{{ post.total_likes }}</span></p>
         </div>
     {% endfor %}
-{% endblock %}
+{% endblock post %}
