--- a/main/templates/main/base1.html
+++ b/main/templates/main/base1.html
@@ -85,7 +85,7 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light shadow sticky-top p-0">
         <a href="{% url 'index' %}" class="navbar-brand d-flex align-items-center px-4 px-lg-5">
-            <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i>นมแม่ ดีที่สุด</h2>
+            <h2 class="m-0 text-primary"><i class="fa fa-book me-3"></i></h2>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -94,7 +94,7 @@
             <div class="navbar-nav ms-auto p-4 p-lg-0">
                 <a href="{% url 'index' %}" class="nav-item nav-link active">หน้าหลัก</a>
                 <a href="{% url 'about' %}" class="nav-item nav-link">เกี่ยวกับเรา</a>
-                <a href="{% url 'post_list' %}" class="nav-item nav-link">การเลี้ยงลูกด้วยนมแม่</a>
+                <a href="{% url 'post_list' %}" class="nav-item nav-link">ITA</a>
                 <!--<div class="nav-item dropdown">
                     <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
                     <div class="dropdown-menu fade-down m-0">
@@ -147,18 +147,18 @@
                     <h4 class="text-white mb-3">ลิงค์ภายใน</h4>
                     <a class="btn btn-link" href="{% url 'about' %}">เกี่ยวกับเรา</a>
                     <a class="btn btn-link" href="{% url 'contact' %}">ติดต่อเรา</a>
-                    <a class="btn btn-link" href="{% url 'post_list' %}">บทความ</a>
+                    <a class="btn btn-link" href="{% url 'post_list' %}">ITA</a>
                     <!--<a class="btn btn-link" href="">วิสัยทัศน์พันธกิจ</a>
                     <a class="btn btn-link" href="#">คำถามบ่อย</a>-->
                 </div>
                 <div class="col-lg-6 col-md-6">
                     <h4 class="text-white mb-3">ติดต่อเรา</h4>
-                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านคุริง ตำบลทรัพอนันต์ อำเภอท่าแซะ จังหวัดชุมพร</p>
-                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+077 077 651 774</p>
-                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>pruch2514pruch01@gmail.com</p>
+                    <p class="mb-2"><i class="fa fa-map-marker-alt me-3"></i>สำนักงานสาธารณสุขอำเภอเมืองชุมพร ตำบลท่ายาง อำเภอเมือง จังหวัดชุมพร</p>
+                    <p class="mb-2"><i class="fa fa-phone-alt me-3"></i>+077 553 507 </p>
+                    <p class="mb-2"><i class="fa fa-envelope me-3"></i>master@sasukcmpo.com</p>
                     <div class="d-flex pt-2">
                         <!--<a class="btn btn-outline-light btn-social" href=""><i class="fab fa-twitter"></i></a>-->
-                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/nxng.taw.lek.dek.haw.khong"><i class="fab fa-facebook-f"></i></a>
+                        <a class="btn btn-outline-light btn-social" href="https://www.facebook.com/profile.php?id=100064794306399"><i class="fab fa-facebook-f"></i></a>
                         <!--<a class="btn btn-outline-light btn-social" href=""><i class="fab fa-youtube"></i></a>
                         <a class="btn btn-outline-light btn-social" href=""><i class="fab fa-linkedin-in"></i></a>-->
                     </div>
