--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -8,14 +8,14 @@
  <div class="container-xxl py-5">
     <div class="container">
         <div class="text-center wow fadeInUp" data-wow-delay="0.1s">
-            <h6 class="section-title bg-white text-center text-primary px-3">ทีมงาน</h6>
-            <h1 class="mb-5">ทีมงานการเลี้ยงลูกด้วยนมแม่</h1>
+            <h6 class="section-title bg-white text-center text-primary px-3">ผู้บริหาร</h6>
+            <h1 class="mb-5">สาธารณสุขอำเภอเมืองชุมพร</h1>
         </div>
         <div class="row g-4">
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                 <div class="team-item bg-light">
                     <div class="overflow-hidden">
-                        <a href="{% url 'contact' %}"><img class="img-fluid" src="{% static 'img/prach.jpg' %}" alt=""></a>
+                        <a href="{% url 'contact' %}"><img class="img-fluid" src="{% static 'img/sso.jpg' %}" alt=""></a>
                     </div>
                     <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                         <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -26,15 +26,15 @@
                         </div>
                     </div>
                     <div class="text-center p-4">
-                        <a href="{% url 'contact' %}"><h5 class="mb-0">นายปรัช บุญกวีร์</h5></a>
-                        <a href="{% url 'contact' %}"><small>นักวิชาการสาธารณสุขชำนาญการ</small></a>
+                        <a href="{% url 'contact' %}"><h5 class="mb-0">นายสุทธิพงษ์ เหล่าศิริวุฒิ</h5></a>
+                        <a href="{% url 'contact' %}"><small>สาธารณสุขอำเภอเมืองชุมพร</small></a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                 <div class="team-item bg-light">
                     <div class="overflow-hidden">
-                        <a href="{% url 'contact' %}"><img class="img-fluid" src="{% static 'img/about1.jpg' %}" alt=""></a>
+                        <a href="{% url 'contact' %}"><img class="img-fluid" src="{% static 'img/sso.jpg' %}" alt=""></a>
                     </div>
                     <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                         <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -45,15 +45,15 @@
                         </div>
                     </div>
                     <div class="text-center p-4">
-                        <a href="{% url 'contact' %}"><h5 class="mb-0">นายกฤษฎา พรหมภากร</h5></a>
-                        <a href="{% url 'contact' %}"><small>ประธาน อ.ส.ม. หมู่ 5</small></a>
+                        <a href="{% url 'contact' %}"><h5 class="mb-0">นายชยานนท์ โชติมณี</h5></a>
+                        <a href="{% url 'contact' %}"><small>รองสาธารณสุขอำเภอเมืองชุมพร</small></a>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                 <div class="team-item bg-light">
                     <div class="overflow-hidden">
-                        <a href="{% url 'contact' %}"><img class="img-fluid" src="{% static 'img/nurse.jpg' %}" alt=""></a>
+                        <a href="{% url 'contact' %}"><img class="img-fluid" src="{% static 'img/sso.jpg' %}" alt=""></a>
                     </div>
                     <div class="position-relative d-flex justify-content-center" style="margin-top: -23px;">
                         <div class="bg-light d-flex justify-content-center pt-2 px-1">
@@ -64,8 +64,8 @@
                         </div>
                     </div>
                     <div class="text-center p-4">
-                        <a href="{% url 'contact' %}"><h5 class="mb-0">น.ส.ดารุณี นุ้ยเขียว</h5></a>
-                        <a href="{% url 'contact' %}"><small>พยาบาลวิชาชีพชำนาญการ ทีปรึกษา</small></a>
+                        <a href="{% url 'contact' %}"><h5 class="mb-0">นายสุภรณ์ นาคแท้</h5></a>
+                        <a href="{% url 'contact' %}"><small>รองสาธารณสุขอำเภอเมืองชุมพร</small></a>
                     </div>
                 </div>
             </div>
@@ -104,15 +104,15 @@
                 <div class="row g-4">
                     <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                         <h5>สามารถติดต่อเราได้ที่</h5>
-                        <p class="mb-4">เลขที่ 1/1 หมู่ที่ 5 โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านคุริง ตำบลทรัพอนันต์ อำเภอท่าแซะ จังหวัดชุมพร 86140</p>
+                        <p class="mb-4">สำนักงานสาธารณสุขอำเภอเมืองชุมพร ตำบลท่ายาง อำเภอเมือง จังหวัดชุมพร 86000</p>
                         <div class="d-flex align-items-center mb-3">
                             <div class="d-flex align-items-center justify-content-center flex-shrink-0 bg-primary" style="width: 50px; height: 50px;">
                                 <i class="fa fa-map-marker-alt text-white"></i>
                             </div>
                             <div class="ms-3">
                                 <h5 class="text-primary">สำนักงาน</h5>
-                                <p class="mb-0">โรงพยาบาลส่งเสริมสุขภาพตำบลบ้านคุริง</p>
-                                <p class="mb-0">ตำบลทรัพอนันต์ อำเภอท่าแซะ จังหวัดชุมพร</p>
+                                <p class="mb-0">สำนักงานสาธารณสุขอำเภอเมืองชุมพร</p>
+                                <p class="mb-0">ตำบลท่ายาง อำเภอเมืองชุมพร จังหวัดชุมพร</p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center mb-3">
@@ -121,7 +121,7 @@
                             </div>
                             <div class="ms-3">
                                 <h5 class="text-primary">เบอร์โทร.</h5>
-                                <p class="mb-0">077 651 774</p>
+                                <p class="mb-0">077 553 507</p>
                             </div>
                         </div>
                         <div class="d-flex align-items-center">
@@ -130,13 +130,14 @@
                             </div>
                             <div class="ms-3">
                                 <h5 class="text-primary">อีเมล์</h5>
-                                <p class="mb-0">pruch2514pruch01@gmail.com</p>
+                                <p class="mb-0">master@sasukcmpo.com</p>
                             </div>
                         </div>
                     </div>
+                    
                     <div class="col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                         <iframe class="position-relative rounded w-100 h-100"
-                            src="https://www.google.com/maps/embed?pb=!1m23!1m12!1m3!1d3920.31111993531!2d99.18090907680994!3d10.710468889434402!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!4m8!3e0!4m0!4m5!1s0x30f8b329f7904a89%3A0x1598e09afb971047!2z4LmC4Lij4LiH4Lie4Lii4Liy4Lia4Liy4Lil4Liq4LmI4LiH4LmA4Liq4Lij4Li04Lih4Liq4Li44LiC4Lig4Liy4Lie4LiV4Liz4Lia4Lil4LiE4Li44Lij4Li04LiHIDEvMSDguKvguKHguLnguYggNSwg4LiV4Liz4Lia4Lil4LiE4Li44Lij4Li04LiHIOC4reC4s-C5gOC4oOC4reC4l-C5iOC4suC5geC4i-C4sCDguIjguLHguIfguKvguKfguLHguJTguIrguLjguKHguJ7guKMsIDg2MTQw!3m2!1d10.7104689!2d99.18348399999999!5e0!3m2!1sth!2sth!4v1733143193278!5m2!1sth!2sth"
+                            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3923.5860755035765!2d99.20866709124928!3d10.454383563054526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3055ffb842c84f6f%3A0x5f935540f12c57a5!2z4Liq4Liz4LiZ4Lix4LiB4LiH4Liy4LiZ4Liq4Liy4LiY4Liy4Lij4LiT4Liq4Li44LiC4Lit4Liz4LmA4Lig4Lit4LmA4Lih4Li34Lit4LiH!5e0!3m2!1sth!2sth!4v1735806932575!5m2!1sth!2sth"
                             frameborder="0" style="min-height: 300px; border:0;" allowfullscreen="" aria-hidden="false"
                             tabindex="0"></iframe>
                             
