--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -7,16 +7,17 @@
 <div class="container-fluid p-0 mb-5">
     <div class="owl-carousel header-carousel position-relative">
         <div class="owl-carousel-item position-relative">
-            <img class="img-fluid" src="{% static 'img/breastmilk3.jpg' %}" alt="">
-            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" >
+            <img class="img-fluid" src="{% static 'img/office2.jpg' %}" alt="">
+            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
                 <div class="container">
                     <div class="row justify-content-start">
                         <div class="col-sm-10 col-lg-8">
-                            <h5 class="text-primary text-uppercase mb-3 animated slideInDown">เลี้ยงลูกด้วยนมแม่ให้สำเร็จ</h5>
-                            <h1 class="display-3 text-white animated slideInDown">“น้ำนมแม่” ประโยชน์แท้จากธรรมชาติ</h1>
-                            <p class="fs-5 text-white mb-4 pb-2">องค์การอนามัยโลก (WHO) และยูนิเซฟ แนะนำว่าลูกควรได้กินนมแม่อย่างเดียว ตั้งแต่แรกเกิดถึง 6 เดือน และควรกินต่อเนื่องไปจนลูกอายุ 2 ปี</p>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">อ่านต่อ</a>
-                            <!--<a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
+                            <h5 class="text-primary text-uppercase mb-3 animated slideInDown"></h5>
+                            <h1 class="display-3 text-white animated slideInDown">สำนักงาน</h1>
+                            <h1 class="display-3 text-white animated slideInDown">สาธารณสุขอำเภอเมืองชุมพร</h1>
+                            <p class="fs-5 text-white mb-4 pb-2"></p>
+                            <!--<a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">อ่านต่อ</a>
+                            <a href="" class="btn btn-light py-md-3 px-md-5 animated slideInRight">Join Now</a>
                             -->
                         </div>
                     </div>
@@ -24,15 +25,15 @@
             </div>
         </div>
         <div class="owl-carousel-item position-relative">
-            <img class="img-fluid" src="{% static 'img/breastmilk2.jpg' %}" alt="">
-            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" style="background: rgba(24, 29, 56, .7);">
+            <img class="img-fluid" src="{% static 'img/office1.jpg' %}" alt="">
+            <div class="position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center" >
                 <div class="container">
                     <div class="row justify-content-start">
                         <div class="col-sm-10 col-lg-8">
-                            <h5 class="text-primary text-uppercase mb-3 animated slideInDown">เลี้ยงลูกด้วยนมแม่ให้สำเร็จ</h5>
-                            <h1 class="display-3 text-white animated slideInDown">“ให้ลูกดูดเร็ว  ดูดบ่อย ดูดถูกต้องหรือดูดถูกวิธี”</h1>
-                            <p class="fs-5 text-white mb-4 pb-2">องค์การอนามัยโลก (WHO) และยูนิเซฟ แนะนำว่าลูกควรได้กินนมแม่อย่างเดียว ตั้งแต่แรกเกิดถึง 6 เดือน และควรกินต่อเนื่องไปจนลูกอายุ 2 ปี</p>
-                            <a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">อ่านต่อ</a>
+                            <h5 class="text-primary text-uppercase mb-3 animated slideInDown"></h5>
+                            <h1 class="display-3 text-white animated slideInDown"></h1>
+                            <p class="fs-5 text-white mb-4 pb-2"></p>
+                            <!--<a href="" class="btn btn-primary py-md-3 px-md-5 me-3 animated slideInLeft">อ่านต่อ</a>-->
 
                         </div>
                     </div>
